--- a/css/style.css
+++ b/css/style.css
@@ -143,3 +143,96 @@ section#about button{
     background-color: var(--primary-color);
     border: none;
 }
+
+/*! PEOPLE */
+
+section#people{
+    background-color: var(--section-color);
+}
+section#people .container{
+    background-color: var(--secondary-color);
+}
+section#people .card{
+    background-color: var(--primary-color);
+    transition: all .5s;
+    overflow: hidden;
+}
+section#people .card:hover{
+    transform: scale(1.05);
+}
+section#people .card img{
+    transition: all 0.5s;
+}
+section#people .card img:hover{
+    transform: scale(1.1);
+}
+
+section#people i{
+    transition: all .5s;
+}
+section#people i:hover{
+    opacity: .5;
+}
+
+/*! Menu */
+
+section#menu{
+    background-color: var(--secondary-color) !important;
+}
+section#menu button{
+    background-color: var(--secondary-color) !important;
+    margin-right: 1rem;
+}
+section#menu .container{
+    background-color: var(--primary-color) !important;
+}
+
+section#menu .menu-header{
+    color: var(--primary-color);
+}
+
+/*! Contact */
+
+section#contact{
+    background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.509),
+        rgba(188, 108, 37, 1)
+    ), url(../img/slider2.jpg);
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+section#contact input, section#contact textarea{
+    background-color: inherit;
+}
+section#contact input:focus, section#contact textarea:focus{
+    background-color: var(--primary-color);
+}
+
+label{
+    color: white;
+    font-style: italic;
+}
+
+textarea{
+    resize: none;
+    height: 100px !important;
+}
+
+input::placeholder{
+    color: white !important;
+}
+
+.google-map{
+    filter: grayscale(100);
+    border-radius: 20px;
+}
+
+/*! Footer */
+
+footer{
+    background-color: var(--primary-color);
+}
